# Zephyr

./: .gitignore  CMakeLists.txt  Makefile
app/: west.yml
app/sourcecode/main/: CMakeLists.txt
